--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.2.6",
     "@primevue/themes": "^4.2.5",
     "@tanstack/vue-query": "^5.62.12",
     "@vee-validate/zod": "^4.15.0",
@@ -34,11 +35,13 @@
     "vue": "^3.5.13",
     "vue-i18n": "^11.0.1",
     "vue-router": "^4.5.0",
+    "vuetify": "^3.9.6",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
+    "@mdi/font": "^7.4.47",
     "@primevue/auto-import-resolver": "^4.2.5",
     "@rushstack/eslint-patch": "^1.10.4",
     "@tanstack/eslint-plugin-query": "^5.62.9",
@@ -58,6 +61,7 @@
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
+    "unplugin-fonts": "^1.4.0",
     "unplugin-vue-components": "^0.27.5",
     "vite": "^6.0.7",
     "vite-plugin-vue-devtools": "^7.6.8",
